plugins {
    id 'java'
}

allprojects {
    group = 'com.ctux.ae2craftingtime'
    version = providers.gradleProperty('modVersion').get()

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'jacoco'

    jacoco {
        toolVersion = '0.8.14'
    }

    plugins.withType(JavaPlugin).configureEach {
        java {
            toolchain.languageVersion = JavaLanguageVersion.of(17)
        }

        tasks.withType(JavaCompile).configureEach {
            options.encoding = 'UTF-8'
        }

        tasks.withType(Jar).configureEach {
            from(rootProject.file('LICENSE')) {
                into 'META-INF'
                rename { 'LICENSE_ae2-crafting-time' }
            }
        }

        dependencies {
            testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
        }

        tasks.named('jacocoTestReport', JacocoReport).configure {
            dependsOn tasks.named('test')
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: '**/mixin/**')
            }))
            reports {
                xml.required = true
            }
        }
    }
}
